# LinuxTools

./: .bashrc  .tmux.conf  README.md  clean.sh  configure.ac  emacs.el  getColors.sh  tools.sh
